feat: add more references

--- a/mtrf.bib
+++ b/mtrf.bib
@@ -99,24 +99,11 @@ papers in Saarland
   journal = {Transactions of the Association for Computational Linguistics},
   volume = {5},
   year = {2017},
-  keywords = {},
-  abstract = {Recent research in psycholinguistics has provided increasing evidence that humans predict upcoming content. Prediction also affects perception and might be a key to robustness in human language processing. In this paper, we investigate the factors that affect human prediction by building a computational model that can predict upcoming discourse referents based on linguistic knowledge alone vs. linguistic knowledge jointly with common-sense knowledge in the form of scripts. We find that script knowledge significantly improves model estimates of human predictions. In a second study, we test the highly controversial hypothesis that predictability influences referring expression type but do not find evidence for such an effect.},
   issn = {2307-387X},
   url = {https://transacl.org/ojs/index.php/tacl/article/view/968},
   pages = {31--44}
 }
 
-@InProceedings{roth2016neural,
-  author    = {Roth, Michael  and  Lapata, Mirella},
-  title     = {Neural Semantic Role Labeling with Dependency Path Embeddings},
-  booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
-  month     = {August},
-  year      = {2016},
-  address   = {Berlin, Germany},
-  publisher = {Association for Computational Linguistics},
-  pages     = {1192--1202},
-  url       = {http://www.aclweb.org/anthology/P16-1113}
-}
 
 
 ------------------------
@@ -158,12 +145,6 @@ paper
   organization={Association for Computational Linguistics}
 }
 
-@article{marcheggiani2017simple,
-  title={A simple and accurate syntax-agnostic neural model for dependency-based semantic role labeling},
-  author={Marcheggiani, Diego and Frolov, Anton and Titov, Ivan},
-  journal={arXiv preprint arXiv:1701.02593},
-  year={2017}
-}
 
 
 ------------------------
@@ -184,7 +165,17 @@ Event
 @article{davidson1967logical,
   title={The logical form of action sentences},
   author={Davidson, Donald},
-  year={1967}
+  year={1967},
+  journal={Essays on actions and events},
+  publisher={Oxford University Press}
+}
+
+@book{parsons1990events,
+  title={Events in the Semantics of English},
+  author={Parsons, Terence},
+  volume={5},
+  year={1990},
+  publisher={Cambridge, Ma: MIT Press}
 }
 
 @article{tenny2000history,
@@ -197,6 +188,43 @@ Event
   publisher={Stanford: CSLI Publications}
 }
 
+verb to noun; Ins, Loc
+@article{ferretti2001integrating,
+  title={Integrating verbs, situation schemas, and thematic role concepts},
+  author={Ferretti, Todd R and McRae, Ken and Hatherell, Andrea},
+  journal={Journal of Memory and Language},
+  volume={44},
+  number={4},
+  pages={516--547},
+  year={2001},
+  publisher={Elsevier}
+}
+
+noun to verb
+@article{mcrae2005basis,
+  title={A basis for generating expectancies for verbs from nouns},
+  author={McRae, Ken and Hare, Mary and Elman, Jeffrey L and Ferretti, Todd},
+  journal={Memory \& Cognition},
+  volume={33},
+  number={7},
+  pages={1174--1184},
+  year={2005},
+  publisher={Springer}
+}
+
+event info
+@article{camblin2007interplay,
+  title={The interplay of discourse congruence and lexical association during sentence processing: Evidence from ERPs and eye tracking},
+  author={Camblin, C Christine and Gordon, Peter C and Swaab, Tamara Y},
+  journal={Journal of Memory and Language},
+  volume={56},
+  number={1},
+  pages={103--128},
+  year={2007},
+  publisher={Elsevier}
+}
+
+words activate salient aspects of the representations of real world events
 @article{hare2009activating,
   title={Activating event knowledge},
   author={Hare, Mary and Jones, Michael and Thomson, Caroline and Kelly, Sarah and McRae, Ken},
@@ -208,6 +236,7 @@ Event
   publisher={Elsevier}
 }
 
+composition
 @article{bicknell2010effects,
   title={Effects of event knowledge in processing verbal arguments},
   author={Bicknell, Klinton and Elman, Jeffrey L and Hare, Mary and McRae, Ken and Kutas, Marta},
@@ -219,6 +248,7 @@ Event
   publisher={Elsevier}
 }
 
+ot
 @inproceedings{barbu2016event,
   title={Event participants and linguistic arguments},
   author={Barbu, Roxana-Maria and Toivonen, Ida},
@@ -230,6 +260,13 @@ Event
 ------------------------
 Semantic roles
 ------------------------
+@phdthesis{gruber1965studies,
+  title={Studies in lexical relations.},
+  author={Gruber, Jeffrey Steven},
+  year={1965},
+  school={Massachusetts Institute of Technology}
+}
+
 @article{fillmore1968case,
   title={The case for case.},
   author={Fillmore, C. J.},
@@ -238,6 +275,13 @@ Semantic roles
   editor={Bach, E. W. and Harms, R. T.},
   publisher={Holt and Rinehart and Winston},
   year={1968}
+}
+
+@book{aarts2013english,
+  title={English syntax and argumentation},
+  author={Aarts, Bas},
+  year={2013},
+  publisher={Palgrave Macmillan}
 }
 
 @article{palmer2005proposition,
@@ -251,17 +295,218 @@ Semantic roles
   publisher={MIT Press}
 }
 
-@book{aarts2013english,
-  title={English syntax and argumentation},
-  author={Aarts, Bas},
-  year={2013},
-  publisher={Palgrave Macmillan}
+@article{bonial2010propbank,
+  title={Propbank annotation guidelines},
+  author={Bonial, Claire and Babko-Malaya, Olga and Choi, Jinho D and Hwang, Jena and Palmer, Martha},
+  journal={Center for Computational Language and Edu-cation Research Institute of Cognitive Science Uni-versity of Colorad at Boulder},
+  year={2010}
+}
+
+@inproceedings{meyers2004nombank,
+  title={The NomBank project: An interim report},
+  author={Meyers, Adam and Reeves, Ruth and Macleod, Catherine and Szekely, Rachel and Zielinska, Veronika and Young, Brian and Grishman, Ralph},
+  booktitle={HLT-NAACL 2004 workshop: Frontiers in corpus annotation},
+  volume={24},
+  pages={31},
+  year={2004}
 }
 
 
 ------------------------
-DM
+SRL
 ------------------------
+@inproceedings{carreras-marquez:2004:CONLL,
+  author    = {Carreras, Xavier  and  M\`{a}rquez, Llu\'{i}s},
+  title     = {Introduction to the CoNLL-2004 Shared Task: Semantic Role Labeling},
+  booktitle = {HLT-NAACL 2004 Workshop: Eighth Conference on Computational Natural Language Learning (CoNLL-2004) },
+  editor = {Hwee Tou Ng and Ellen Riloff},
+  year      = {2004},
+  month     = {May 6 - May 7},
+  address   = {Boston, Massachusetts, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {89--97}
+}
+
+@InProceedings{carreras-marquez:2005:CoNLL,
+  author    = {Carreras, Xavier  and  M{\`a}rquez, Llu{\'i}s},
+  title     = {Introduction to the {CoNLL}-2005 Shared Task: Semantic Role Labeling},
+  booktitle = {Proceedings of the Ninth Conference on Computational Natural Language Learning (CoNLL-2005)},
+  month     = {June},
+  year      = {2005},
+  address   = {Ann Arbor, Michigan},
+  publisher = {Association for Computational Linguistics},
+  pages     = {152--164},
+  url       = {http://www.aclweb.org/anthology/W/W05/W05-0620}
+}
+
+@InProceedings{surdeanu-EtAl:2008:CONLL,
+  author    = {Surdeanu, Mihai  and  Johansson, Richard  and  Meyers, Adam  and  M\`{a}rquez, Llu\'{\i}s  and  Nivre, Joakim},
+  title     = {The CoNLL 2008 Shared Task on Joint Parsing of Syntactic and Semantic Dependencies},
+  booktitle = {CoNLL 2008: Proceedings of the Twelfth Conference on Computational Natural Language Learning},
+  month     = {August},
+  year      = {2008},
+  address   = {Manchester, England},
+  publisher = {Coling 2008 Organizing Committee},
+  pages     = {159--177},
+  url       = {http://www.aclweb.org/anthology/W08-2121}
+}
+
+@InProceedings{hajivc-EtAl:2009:CoNLL-2009-ST,
+  author    = {Haji\v{c}, Jan  and  Ciaramita, Massimiliano  and  Johansson, Richard  and  Kawahara, Daisuke  and  Mart\'{\i}, Maria Ant\`{o}nia  and  M\`{a}rquez, Llu\'{i}s  and  Meyers, Adam  and  Nivre, Joakim  and  Pad\'{o}, Sebastian  and  \v{S}t\v{e}p\'{a}nek, Jan  and  Stra\v{n}\'{a}k, Pavel  and  Surdeanu, Mihai  and  Xue, Nianwen  and  Zhang, Yi},
+  title     = {The CoNLL-2009 Shared Task: Syntactic and Semantic Dependencies in Multiple Languages},
+  booktitle = {Proceedings of the Thirteenth Conference on Computational Natural Language Learning (CoNLL 2009): Shared Task},
+  month     = {June},
+  year      = {2009},
+  address   = {Boulder, Colorado},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1--18},
+  url       = {http://www.aclweb.org/anthology/W09-1201}
+}
+
+@InProceedings{bohnet:2010:PAPERS,
+  author    = {Bohnet, Bernd},
+  title     = {Top Accuracy and Fast Dependency Parsing is not a Contradiction},
+  booktitle = {Proceedings of the 23rd International Conference on Computational Linguistics (Coling 2010)},
+  month     = {August},
+  year      = {2010},
+  address   = {Beijing, China},
+  publisher = {Coling 2010 Organizing Committee},
+  pages     = {89--97},
+  url       = {http://www.aclweb.org/anthology/C10-1011}
+}
+
+@article{punyakanok2008importance,
+  title={The importance of syntactic parsing and inference in semantic role labeling},
+  author={Punyakanok, Vasin and Roth, Dan and Yih, Wen-tau},
+  journal={Computational Linguistics},
+  volume={34},
+  number={2},
+  pages={257--287},
+  year={2008},
+  publisher={MIT Press}
+}
+
+mate-tool
+@inproceedings{bjorkelund2010high,
+  title={A high-performance syntactic and semantic dependency parser},
+  author={Bj{\"o}rkelund, Anders and Bohnet, Bernd and Hafdell, Love and Nugues, Pierre},
+  booktitle={Proceedings of the 23rd International Conference on Computational Linguistics: Demonstrations},
+  pages={33--36},
+  year={2010},
+  organization={Association for Computational Linguistics}
+}
+
+Comp of 05, 09, 12
+@inproceedings{fitzgerald2015semantic,
+  title={Semantic Role Labeling with Neural Network Factors.},
+  author={FitzGerald, Nicholas and T{\"a}ckstr{\"o}m, Oscar and Ganchev, Kuzman and Das, Dipanjan},
+  booktitle={EMNLP},
+  pages={960--970},
+  year={2015}
+}
+
+@article{tackstrom2015efficient,
+  title={Efficient inference and structured learning for semantic role labeling},
+  author={T{\"a}ckstr{\"o}m, Oscar and Ganchev, Kuzman and Das, Dipanjan},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={3},
+  pages={29--41},
+  year={2015}
+}
+
+@InProceedings{lei-EtAl:2015:NAACL-HLT,
+  author    = {Lei, Tao  and  Zhang, Yuan  and  M\`{a}rquez, Llu\'{i}s  and  Moschitti, Alessandro  and  Barzilay, Regina},
+  title     = {High-Order Low-Rank Tensors for Semantic Role Labeling},
+  booktitle = {Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  month     = {May--June},
+  year      = {2015},
+  address   = {Denver, Colorado},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1150--1160},
+  url       = {http://www.aclweb.org/anthology/N15-1121}
+}
+
+@InProceedings{roth2016neural,
+  author    = {Roth, Michael  and  Lapata, Mirella},
+  title     = {Neural Semantic Role Labeling with Dependency Path Embeddings},
+  booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month     = {August},
+  year      = {2016},
+  address   = {Berlin, Germany},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1192--1202},
+  url       = {http://www.aclweb.org/anthology/P16-1113}
+}
+
+@article{marcheggiani2017simple,
+  title={A simple and accurate syntax-agnostic neural model for dependency-based semantic role labeling},
+  author={Marcheggiani, Diego and Frolov, Anton and Titov, Ivan},
+  journal={arXiv preprint arXiv:1701.02593},
+  year={2017}
+}
+
+
+------------------------
+DSM
+------------------------
+@article{harris1954distributional,
+  title={Distributional structure},
+  author={Harris, Zellig S},
+  journal={Word},
+  volume={10},
+  number={2-3},
+  pages={146--162},
+  year={1954},
+  publisher={Taylor \& Francis}
+}
+
+@article{miller1991contextual,
+  title={Contextual correlates of semantic similarity},
+  author={Miller, George A and Charles, Walter G},
+  journal={Language and cognitive processes},
+  volume={6},
+  number={1},
+  pages={1--28},
+  year={1991},
+  publisher={Taylor \& Francis}
+}
+
+@phdthesis{pado2007integration,
+  title={The Integration of Syntax and Semantic Plausibility in a Wide-Coverage Model of Human Sentence Processing},
+  author={Pado, Ulrike},
+  year={2007},
+  school={Saarland University}
+}
+
+@inproceedings{erk2008structured,
+  title={A structured vector space model for word meaning in context},
+  author={Erk, Katrin and Pad{\'o}, Sebastian},
+  booktitle={Proceedings of the Conference on Empirical Methods in Natural Language Processing},
+  pages={897--906},
+  year={2008},
+  organization={Association for Computational Linguistics}
+}
+
+@article{pado2009probabilistic,
+  title={A probabilistic model of semantic plausibility in sentence processing},
+  author={Pad{\'o}, Ulrike and Crocker, Matthew W and Keller, Frank},
+  journal={Cognitive Science},
+  volume={33},
+  number={5},
+  pages={794--838},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{rothenhausler2009unsupervised,
+  title={Unsupervised classification with dependency based word spaces},
+  author={Rothenh{\"a}usler, Klaus and Sch{\"u}tze, Hinrich},
+  booktitle={Proceedings of the Workshop on Geometrical Models of Natural Language Semantics},
+  pages={17--24},
+  year={2009},
+  organization={Association for Computational Linguistics}
+}
+
 @article{baroni2010distributional,
   title={Distributional memory: A general framework for corpus-based semantics},
   author={Baroni, Marco and Lenci, Alessandro},
@@ -273,6 +518,28 @@ DM
   publisher={MIT Press}
 }
 
+compositional
+@inproceedings{LenciECU,
+ author = {Lenci, Alessandro},
+ title = {Composing and Updating Verb Argument Expectations: A Distributional Semantic Model},
+ booktitle = {Proceedings of the 2Nd Workshop on Cognitive Modeling and Computational Linguistics},
+ series = {CMCL '11},
+ year = {2011},
+ location = {Portland, Oregon},
+ pages = {58--66},
+ numpages = {9},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+
+@inproceedings{baroni2014don,
+  title={Don't count, predict! A systematic comparison of context-counting vs. context-predicting semantic vectors.},
+  author={Baroni, Marco and Dinu, Georgiana and Kruszewski, Germ{\'a}n},
+  booktitle={ACL (1)},
+  pages={238--247},
+  year={2014}
+}
 
 @inproceedings{santus2017measuring,
   author    = {Santus, Enrico  and  Chersoni, Emmanuele  and  Lenci, Alessandro  and  Blache, Philippe},
@@ -291,6 +558,26 @@ DM
 ------------------------
 Embedding
 ------------------------
+@inproceedings{hinton1986learning,
+  title={Learning distributed representations of concepts},
+  author={Hinton, Geoffrey E},
+  booktitle={Proceedings of the eighth annual conference of the cognitive science society},
+  volume={1},
+  pages={12},
+  year={1986},
+  organization={Amherst, MA}
+}
+
+@article{bengio2003neural,
+  title={A neural probabilistic language model},
+  author={Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Jauvin, Christian},
+  journal={Journal of machine learning research},
+  volume={3},
+  number={Feb},
+  pages={1137--1155},
+  year={2003}
+}
+
 @inproceedings{mikolov2013linguistic,
   title={Linguistic regularities in continuous space word representations.},
   author={Mikolov, Tomas and Yih, Wen-tau and Zweig, Geoffrey},
@@ -313,6 +600,60 @@ Embedding
   booktitle={Advances in neural information processing systems},
   pages={3111--3119},
   year={2013}
+}
+
+
+------------------------
+Thematic fit / Selectional preference
+------------------------
+@article{trueswell1994semantic,
+  title={Semantic influences on parsing: Use of thematic role information in syntactic ambiguity resolution},
+  author={Trueswell, John C and Tanenhaus, Michael K and Garnsey, Susan M},
+  journal={Journal of memory and language},
+  volume={33},
+  number={3},
+  pages={285},
+  year={1994},
+  publisher={Academic Press}
+}
+
+@article{mcrae1997thematic,
+  title={Thematic roles as verb-specific concepts},
+  author={McRae, Ken and Ferretti and Liane Amyote, Todd R},
+  journal={Language and cognitive processes},
+  volume={12},
+  number={2-3},
+  pages={137--176},
+  year={1997},
+  publisher={Taylor \& Francis}
+}
+
+@article{mcrae1998modeling,
+  title={Modeling the influence of thematic fit (and other constraints) in on-line sentence comprehension},
+  author={McRae, Ken and Spivey-Knowlton, Michael J and Tanenhaus, Michael K},
+  journal={Journal of Memory and Language},
+  volume={38},
+  number={3},
+  pages={283--312},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@inproceedings{vandekerckhove2009robust,
+  title={A robust and extensible exemplar-based model of thematic fit},
+  author={Vandekerckhove, Bram and Sandra, Dominiek and Daelemans, Walter},
+  booktitle={Proceedings of the 12th Conference of the European Chapter of the Association for Computational Linguistics},
+  pages={826--834},
+  year={2009},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{van2014neural,
+  title={A Neural Network Approach to Selectional Preference Acquisition.},
+  author={Van de Cruys, Tim},
+  booktitle={EMNLP},
+  pages={26--35},
+  year={2014}
 }
 
 
@@ -370,11 +711,25 @@ NN
   year={2015}
 }
 
+@inproceedings{he2016deep,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={770--778},
+  year={2016}
+}
 
 
 ------------------------
-book
+Books
 ------------------------
+@misc{schutze1997ambiguity,
+  title={Ambiguity Resolution in Natural Language Learning. CSLI},
+  author={Sch{\"u}tze, Hinrich},
+  year={1997},
+  publisher={Stanford, CA}
+}
+
 @incollection{caruana1998multitask,
   title={Multitask learning},
   author={Caruana, Rich},
@@ -520,15 +875,7 @@ Roleo 2016
   year={2013},
   organization={Citeseer}
 }
-@article{bengio2003neural,
-  title={A neural probabilistic language model},
-  author={Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Janvin, Christian},
-  journal={The Journal of Machine Learning Research},
-  volume={3},
-  pages={1137--1155},
-  year={2003},
-  publisher={JMLR. org}
-}
+
 @inproceedings{sutskever2011generating,
   title={Generating text with recurrent neural networks},
   author={Sutskever, Ilya and Martens, James and Hinton, Geoffrey E},
@@ -590,20 +937,6 @@ functional (as opposed to imperative). These expressions allow Theano to provide
 them into C++ (or CUDA for GPU), compiles them into dynamically loaded Python modules, all automatically. Common machine learning algorithms implemented with Theano are from 1.6× to 7.5× faster than competitive alternatives (including those implemented with C/C++, NumPy/SciPy and MATLAB) when compiled for the
 CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illustrates how to use Theano, outlines the scope of the compiler, provides benchmarks on both CPU and GPU processors, and explains its overall design.}
 }
-
-
-@inproceedings{LenciECU,
- author = {Lenci, Alessandro},
- title = {Composing and Updating Verb Argument Expectations: A Distributional Semantic Model},
- booktitle = {Proceedings of the 2Nd Workshop on Cognitive Modeling and Computational Linguistics},
- series = {CMCL '11},
- year = {2011},
- location = {Portland, Oregon},
- pages = {58--66},
- numpages = {9},
- publisher = {Association for Computational Linguistics},
- address = {Stroudsburg, PA, USA},
-} 
 
 @article{Binder2001,
    title={The effects of thematic fit and discourse context on syntactic 
