feat: update introduction and example

--- a/mtrf.tex
+++ b/mtrf.tex
@@ -38,17 +38,29 @@ We introduce a neural network model capturing both lexical and semantic features
 
 
 
-\section{Introduction}
-Event participants can be mapped to arguments of a predicate.
-A level of representation to show the common characteristics is \textit{semantic roles} which express the abstract role of the argument of a predicate can taken in an event. 
-For example, 
-\begin{figure}[ht]
-\centering
-\includegraphics[width=0.8\textwidth]{BOP.png}
-\caption{\label{fig:SemanticRoles} An event with predicate and event participants. Each event participant is annotated with its corresponding semantic role}
-\end{figure}
+\section{Introduction} \label{sec:intro}
+In natural language understanding, the representation of events and their participants take an important role. To understand different sentences, we need to focus on event-level information among them  (see Section \ref{sec:event}). For example, in sentences like: 
+\begin{eqnarray}
+    & &\text{The cook cut the cake with knife in the kitchen.}        \label{eg:sent1} \\   
+    & &\text{In the kitchen, the cake is cut with knife by the cook.} \label{eg:sent2}
+\end{eqnarray}
+the event-level information are actually the same. The event is described by the predicate $cut$ and the participants of this event are $cook$, $cake$, $knife$ and $kitchen$. Although the syntactic roles of participant $cook$ in two sentences are different (subject in sentence \eqref{eg:sent1} and object in sentence \eqref{eg:sent2}), they are both the $cutter$ of the $cake$. This shared information can be capture by a level of shallow semantic representation: \textit{semantic roles} \citep{jurafsky2014speech}. 
 
-\noindent
+Semantic roles express the abstract roles of participant can taken in an event. In this level of representation, event participants can be mapped to arguments where they located. Using \textit{thematic role}, an inventory of conceptual argument roles (see Section \ref{sec:semanticrole}), the two sentences in earlier example can be annotated as: 
+\begin{equation*} \label{eg:thematic}
+\begin{aligned}
+    & [_\text{AGENT }\text{The }\textbf{cook}]\ cut\ [_\text{PATIENT }\text{the }\textbf{cake}]\ [_\text{INSTRUMENT }\text{with }\textbf{knife}]\ [_\text{LOCATION }\text{in the }\textbf{kitchen}]. \\
+    & [_\text{LOCATION }\text{In the }\textbf{kitchen}],\ [_\text{PATIENT }\text{the }\textbf{cake }]\ is \ cut\ [_\text{INSTRUMENT }\text{with }\textbf{knife}]\ [_\text{AGENT }\text{by the }\textbf{cook}].\\
+\end{aligned}
+\end{equation*} 
+where the event participants are actually head nouns or noun-noun compounds inside arguments of the predicate $cut$. $The\ cook$, volitional causer of the event, has a AGENT role and $the\ cake$, the participant mostly affected by the event, has a PATIENT role. But it has been shown that it is hard to define thematic role formally. As a result, the PropBank \citep{palmer2005proposition} style semantic role model is introduced where each semantic role is associated with a specific verb sense. So the representation of two sentences can be unified as: 
+\begin{equation*} \label{eg:probank}
+\begin{aligned}
+    & \text{Predicate: cut.}\textbf{01} \\
+    & \text{Arguments: } [_\text{ARG0 }\text{The }\textbf{cook}], \ [_\text{ARG1 }\text{the }\textbf{cake}], \ [_\text{ARGM-MNR }\text{with a }\textbf{knife}], \ [_\text{ARGM-LOC }\text{in the }\textbf{kitchen}]
+\end{aligned}
+\end{equation*} 
+where each argument is assigned with a semantic role label. $cut.01$ is the verbal predicate $cut$ with sense $01$ which is \textit{"make an incision or separation"}. Now the ARG0 role can be defined exactly as \textit{"the subject which makes incision"}. To obtain this representation from raw text, one needs to solve semantic role labelling task. 
 
 
 \noindent
