--- a/mtrf.tex
+++ b/mtrf.tex
@@ -69,30 +69,47 @@ Since both raw words and semantic role labels are symbols, it has limited repres
 The main problem is that only few works learn embeddings at the event level. \citet{tilk2016event} proposed two models trained on SDS2015 to learn a representation of events and their participants. To obtain a probability distribution over role-fillers given the event information, the models aim to perform \textit{role-filler prediction}: In each event, given the role label of one target word, and also given all other words and their role labels, the task is to predict the target word to fill the target role. The predicate is considered as a special role label which is not in PropBank style semantic roles. The representation, named as \textit{role-specific word embedding}, learnt by those models is organised into an order-3 tensor. This means that for each word and each role, there is an embedding vector. They reported great improvement over previous systems on thematic fit evaluation and competitive performance on event similarity evaluation. However, the definition of notion \textit{role} is vague. It is hard to explain why predicates and semantic role-fillers are treated as the same. In addition to that, there is a problem of event embedding if we only focus on role-filler prediction. The event embeddings with same argument words but different roles can be very similar to each other. For example, the embedding vector of $([_\text{ARG0 }\text{boy}], [_\text{PREDICATE }\text{eat}], [_\text{ARG1 }\text{apple}])$ can be very similar to the embedding vector of $([_\text{ARG0 }\text{apple}], [_\text{PREDICATE }\text{eat}], [_\text{ARG1 }\text{boy}])$, where $cut$ is the shared predicate. 
 
 
+\subsection{Main Tasks and Contribution}
+In this paper, we present several multi-task neural network models to learn embeddings at the level of event. With a view to the explainability of the task, we separate \textit{role-filler prediction} into two sub-tasks: 
+\begin{itemize}
+  \item  \textbf{Participant prediction}: in each event, given the predicate, the semantic role label of one target participant, the other participants and their semantic role labels, the task is to predict the target participant to fill the semantic role. 
+  \item  \textbf{Predicate prediction}: in each event, given all participants and their semantic role labels, the task is to predict the predicate. 
+\end{itemize}
+where participant and predicate can be combined as \textit{role-filler}. Since their lexical features are homogeneous, we can consider each role-filler as a word. To get rid of ambiguity, we define \textbf{role labels} as a set which contains semantic role labels in PropBank style for event participants and a role label PREDICATE for predicates. In order to tackle the problem in event embedding stated above, we add one more auxiliary task which is: 
+\begin{itemize}
+  \item  \textbf{Role label prediction}: in each event, given one target word, and all other words and their role labels, the task is to predict the target role label. 
+\end{itemize}
+By forcing the models to solve role label prediction during training, the event embeddings with same words but different roles will be distinguished. 
+
+Inspiring by the role-specific word embedding, we define the \textbf{event-participant embedding} formally as the joint embedding of predicates that denote events and participants of events. The embedding vectors are stacked together to construct an order-3 tensor where each vector is indexed by a 2-tuple $(word, role\ label)$. As a result, each word can be represented as a matrix, indexed by an 1-tuple $(word)$, which can be easily reshaped into a word embedding vector (see Section \ref{sec:epe}). Although the event-participant embedding is a versatile representation, it suffers the curse of dimensionality. So we apply tensor factorisation on the event-participant embedding tensor, which factorise the tensor into three matrices. After detailed analysis in the tensor space, we demonstrate that these matrices can be interpreted as word embedding, role label embedding and projection weight correspondingly (see Section \ref{sec:tf}). 
+
+Using the same event-participant embedding as input, we add non-linearity to the models to construct multitask neural networks. To perform both role-filler prediction and role label prediction, we design two classifiers with their own loss functions. The models are optimised with different weight of each task (see Section \ref{sec:mtl}). We find that tuning the loss weight results in models having their own advantages in different aspects. When it comes to the construction of event representation, there are two cases: word order is known and unknown. In this paper, we focus on the case which word order is not given. After comparing several composition methods, we present an effective method to compose the event-level embedding using features from hidden layer (see Section \ref{sec:composition}). It has been shown that gradient exploding or vanishing problem is more serious in training model with factorised tensors \citep{sutskever2011generating}.  Making use of the idea in residual learning, we add one skip connection inside the factor tensor (see Section \ref{sec:residual}). We find that this method can help with learning a better event-participant embedding.
+
+To compare with previous baselines, all models are trained on the SDS2015. Hyper-parameters are tuned to optimise for different purposes (see Section \ref{sec:exp}). The output probabilities of the models on word prediction are evaluated on human thematic fit judgement correlation task (see Section \ref{sec:thematicfit}). The word embeddings are evaluated on several word similarity tasks (see Section \ref{sec:wordsim}). Last but not least, the event embeddings are evaluated on a event similarity correlation task (see Section \ref{sec:eventsim}). The results show that our models has significant improvement over the current best system on specific evaluations while has state-of-the-art performance on the other evaluations. The word embedding and event embedding extracted from the event-participant embedding we learnt also has state-of-the-art performance. 
 
 
-\noindent
-In this paper, we present a model ...
+
+\section{Background}
+\subsection{Event Knowledge and Representation} \label{sec:event}
 
 
+\subsection{Semantic Role Models} \label{sec:semanticrole}
 
-\section{Related Works}
-\noindent
+
+\subsection{Semantic Role Labelling} \label{sec:srl}
+The semantic role labeling task is to assign semantic role labels to the event participants in an event. After many years of research, pre-trained semantic role labeling systems are quite reliable. However, most of these works only assign labels to the whole constituents or phrases. \citet{Sayeed2014} proposed an unsupervised method of assigning semantic roles to headwords in event participants to construct a corpus. The raw text are firstly processed by a state-of-the-art semantic role labeller SENNA \citep{Collobert}. Then a dependency parser Malt Parser is used to extract the headwords of the event participants together with some heuristics.
+
+There are many state-of-the-art SRL systems \citep{collobert2011natural, titov2011bayesian}. \citet{roth2016neural} proposed PathLSTM which made use of syntactic features. But \citet{marcheggiani2017simple} claimed that syntactic features is not necessary for semantic role labeling.
+
+\subsection{Distributional Semantic Model} \label{sec:dsm}
 Distributed representation of words is useful in natural language understanding, natural language generation and machine translation. There are many efforts on learning word embedding from large scale text corpora. Nevertheless for generality, most of these works only use raw word as input without using any semantic features. 
 
 
-\noindent
-The semantic role labeling task is to assign semantic role labels to the event participants in an event. After many years of research, pre-trained semantic role labeling systems are quite reliable. However, most of these works only assign labels to the whole constituents or phrases. \citet{Sayeed2014} proposed an unsupervised method of assigning semantic roles to headwords in event participants to construct a corpus. The raw text are firstly processed by a state-of-the-art semantic role labeller SENNA \citep{Collobert}. Then a dependency parser Malt Parser is used to extract the headwords of the event participants together with some heuristics.
-
-
-\subsection{Representation Learning}
-
+\subsection{Distributed Representation} \label{sec:repr}
 Words can be represented with vectors in adjacent matrix using count based method. But when it comes to the practice, this kind of method has a problem of sparsity. The vector of count-based method is discrete, high-dimensional and sparse. Distributed representation is an effective method to tackle sparsity of high-dimensional vectors. \\
 \noindent
 \citet{mikolov2013distributed} proposed recurrent neural network based language model.
 
-\subsection{Semantic Role Labeling}
-There are many state-of-the-art SRL systems \citep{collobert2011natural, titov2011bayesian}. \citet{roth2016neural} proposed PathLSTM which made use of syntactic features. But \citet{marcheggiani2017simple} claimed that syntactic features is not necessary for semantic role labeling.
 
 \subsection{Cognitive Modelling}
 \subsubsection{Event Level Model}
@@ -124,7 +141,7 @@ Construct distributional memory model.
 
 
 \section{Representation of Event Participants}
-\subsection{Event Participant Embedding}
+\subsection{Event-Participant Embedding} \label{sec:epe}
 We intend to learn meaningful representation in semantic space of words and roles. Firstly we define the symbolic representation for words. Word $a_i$ is encoded as one-hot row vector $\mathbf{w}_i = [00...1...0]$ containing exactly one $1$ value in the position of word index $i$ and other values are all $0$, where $|\mathbf{w}_i| = |V|$ and $V$ is the word vocabulary. In this vector space, words are mutual exclusive to each other.  \\
 \noindent
 Futher than that, we need to obtain a distributed representation that is smoother. So we compute the inner product between $\mathbf{w}_i$ and a embedding matrix $\mathbf{A} \in \mathbb{R}^{|V| \times k}$ as $\mathbf{A}_{(i)} = \mathbf{w}_i \mathbf{A}$. The vector $\mathbf{w}_i$ is now mapped to low-dimensional vector $\mathbf{A}_{(i)} \in \mathbb{R}^k$ which is the $i$-th row of matrix $\mathbf{A}$. The symbolic representations of words are transformed into distributed representations. \\
@@ -133,7 +150,7 @@ In addition to word embedding, we want to learn the representation of words give
 
 
 
-\subsection{Tensor Decomposition}
+\subsection{Tensor Factorisation} \label{sec:tf}
 Although the role-specific word embedding is a versatile representation, it suffer the curse of dimensionality. There are $|V| \times |R| \times d$ parameters in the order-3 tensor $\mathbf{T}$. Since word vocabulary size $|V|$ is often very big (more than $50,000$), the number of parameters in the tensor is too huge, which makes the model hard to converge. \todo[]{more drawbacks} \\
 \noindent
 \citet{tilk2016event} proposed an effective tensor factorisation method on the parameter tensor to reduce the number of parameters. Similarly, we perform tensor rank decomposition \citep{hitchcock1927expression} on the embedding tensor in real space:
@@ -176,6 +193,7 @@ which is a representation of a participant in an event. "$\circ$" is Hadamard pr
 
 
 \section{Model Design}
+\subsection{Non-incremental Role Filler} \label{sec:nnrf}
 To tackle the role filler prediction task, \citet{tilk2016event} proposed the \textit{non-incremental role filler}\textbf{(NNRF)}, a 2-layer neural network model. As in Figure \ref{fig:NNRF}, from input to output, the model uses role based word representations of event participants as input. Parameters are learned together with the model. The embedding vectors are composed using sum method into an representation of event participants except the target participant. Then it passes through one non-linearity layer with parametric rectified linear unit. After that, a softmax regression classifier is used for prediction. 
 
 
@@ -212,7 +230,7 @@ Using the mean method, the embedding vectors are composed as:
 
 
 
-\subsection{Multitask Learning}
+\subsection{Multitask Learning} \label{sec:mtl}
 The \textbf{NNRF} model is trained to solve the role filler prediction task. When we want to obtain the representation of the event, there is a problem if we only focus on role filler prediction. The representations with same arguments but different roles can be very similar to each other. For example, the embedding vector of $(boy_{ARG0}, eat_{PREDICATE}, apple_{ARG1})$ can be very similar to the embedding vector of  $(apple_{ARG0}, eat_{PREDICATE}, boy_{ARG1})$. \\
 To tackle this problem we add one more auxiliary task which is  \textbf{semantic role prediction} task:
 \begin{itemize}
@@ -291,6 +309,9 @@ where $diag(\mathbf{v})$ is a diagonal matrix with vector $\mathbf{v}$ on its di
 \includegraphics[width=0.8\textwidth]{BOP.png}
 \caption{\label{fig:BOP} Model architecture of multitask role filler.}
 \end{figure}
+
+
+\subsection{Composition Method for Event Embedding} \label{sec:composition}
 
 
 
